Adicionando mais um semáforo

--- a/Semaforo/Form1.resx
+++ b/Semaforo/Form1.resx
@@ -256,4 +256,142 @@
   <metadata name="Timer1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <data name="imgRed2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAEAAAACDCAYAAAA9FR3EAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        xAAADsQBlSsOGwAACTpJREFUeF7tnVeoHccZx9V7lyyBlKh3CXVQRxXUC2qo99577w9BDwZDHmL8kBeJ
+        KETCJoEQJRYYg4UQyMiWsclLQkiCgiIpJGpWu9Lk+0124eTkO3t3z9k9szdnB36cu3vvnfnmv1O+/Wb2
+        bC1T4SkTwPus2JQJ4H1WbMoE8D4rNmUCeJ8VmzIBvM+KTZkA3mfJ6e3bt+b169fm5cuXZYUyKbvYVLIA
+        jx49MlevXjUHDx4006dPN8OGDTNDhgwpC0OHDjVTp041e/fuNVeuXLG2RE1FC/Du3Ttz69Yts3DhQtOk
+        SRNTu3ZtU6tWLWc0bdrULF261Ny5c8faFjYVLcDNmzfN8OHDVWNcMm7cOHP37l3PyupTUQI8ePDAzJs3
+        TzUgDaxZs8Y8efLEszY4FSXA5cuXTaNGjdTC00CbNm3MtWvXPGuDU2QBGHF37dqlFpwW6tata86dO+dZ
+        HJwiC8C0M2XKFLXgKNQVGgvNhRYe/My5OoL2P1FYvny5qaqq8qwunCIL8OrVKzv9aIWG4QfCLOFHwjXh
+        O+GPHt8IvxROC1OE9oKWRximTZtmnj175lldOJVNACqzW/hc+F6Qk4H8S/iNsFqgdWh5BoEAT58+9awu
+        nKS0aCmqADR1rubvhBeCnIzEE+EXwnBBy78QqRCggcAV/LMgJ0qC7jFdCDs+OBeAK0/l7wlyIhZ+LyCC
+        Vl4+zgWg2cdx5fP5WhgoaGXm4lQABrzfCnIQO2+FnwrNBK1sH2cC0EcZ7YsZ8MLyD2GBoJXv40yATgJT
+        nRwkys+FoFbgTICZQph5vlT+LgwSNBvAiQCM/Hh4cpA4r4UtgmYHOBEAPx7vTQ7KwodCbUGzxYkA9Mlv
+        BTkoC4idKgG4m/uDIAdl4TOhkGeYCeCqC+CpyUFZ+JWQqi7QSPhEkIPEeSd8IKRKAJrjCUEOEueVsErQ
+        7AAnAsBE4Z+CHCQKN1q9BM0GcCbAe8KvBTlIlI8E/A7NBnAmAH1yhUBIS04kwl+FyYJWvo8zAYDp8GeC
+        HMTOG+GC0FDQyvZxKgAMEb4S5CA2GPmvCz8UtDJzcS4ATBXidI2/EIYKWln5pEIApkVCY18KXD05WRRV
+        wqcCrarQvJ9PKgTw6Stw5/ZAkBOR+IvALTYLKlrehUiVANBUmCNcFP4mvBTkF/8DLYVw2p+Enwj4FYTX
+        tTyDSJ0APgjRX1gv/FhgKYxFE/hYeF9YLvQQcK21PMKQWgE06Ndh+3ZYapQASZAJkAmQCZAJkFoB6tSp
+        Yzcyde3a1fTr188MHDjQ0rdvX9OlSxfTqlWrkvcdplKAxo0b2wrPnTvXbNq0ye4uPX36tDl79qzl5MmT
+        Zv/+/Wb9+vVmxowZpkePHqZBgwZqXtWRKgHq169vevfubVauXGmOHTtmK8suLj7PnDnzX+T+7siRI2bx
+        4sW2VdBqtLwLkRoB2EY7efJkc+jQIVsprdKF8P+evcCjRo2yQmplaKRCgObNm9sdpTTtKBXPh/+l5bA9
+        L+wGTecCYOjs2bPNqVOnSqq8D3kcP37cTJw40W6E1MrMxakAjOCjR482J06cUCtTCocPHzYDBgxQy83F
+        qQAdO3Y0u3fvjuXK58MAuWHDBtO6dWu1bB9nAtSrV88+OKEZHxd0K1pYkK/gTIAOHTrYzdRJXH0f8t64
+        caNp1qyZagM4E4BHWXBuNMPjhFmhW7duqg3gRABGZ7w8zeC4oRtMmDBBtQOcCICjsm7dukSbvw9lLFiw
+        oOA44ESAhg0bmp07d5ZFAGaDVatWpU+ApAdAHwRYvXp11gJSJUDFjwEVPwtARfsBgCeY1H2AD3mn1hP0
+        7wWSFIDmP2bMmMAokTMBoFOnTmbPnj2JiODfDRJU1cr2cSoAIzNXKKl4ABFkrdxcnAoARIDnzJkTe0Ro
+        0qRJtptpZebiXABo0aKFmT9/fski+JXnyxJqTEzQh6gwhtN0o4rA38O+fftsAKTGRYV9MJxVH3z3qOsC
+        S5YssStINXZdIBdaAwFNusXmzZvtWkHuyhBd5cCBA3aUnzVrlunZs6e9v9Dyqo5UCuCDy9y2bVvTvXt3
+        K8igQYMs/fv3t1f7/3ZtsJxkAmQCZAJkAmQCpFEAnKJ27dqZwYMHWyNxdPjGF1i0aJH1GpkamQrD+PyF
+        SJ0AVLxXr17WCcK19e8U8frOnz9v4WccI35HUIVtMp07dw61HJ5PqgTA6Zk5c6bdE6S5v4Xgb9kdwh0g
+        my20vAuRCgHw5vDsCF/5FcqvZHXwP7SKFStW2HCbVo5GKgSg8tu2bSuq4hpr164NLYJzATCUG564Ku9D
+        SwjTHZwKwN4+Fi20CpQK3YHNUtUNjE4FIGZ39OjR2K8+kCezCN1LK9vHmQDc8y9btsxOaVoF4gARiBcE
+        RYicCcCuTiI5muFxQtg9KDTuRACmvfHjx6sGxw2bLwmiaHaAEwFwXXFtk+j7+TAYUknNDnAiAKP/li1b
+        yiIAZfA1uqlaHs92iFS6AHSBOF3fIBCAW+hUCcAgiKtaDgGA3eiaHeBEAFZvcFM1Y+OGaXDEiBGqHeBE
+        ACDowUKmZnScsKoUdGfoTABWhLltTdIVJm/CZ0HLZs4EYFAaOXJkyY/JFII8cbVZRtPK93EmAPBd/2xi
+        TGow5Dmk6hZNnQoALHwSz4tTBPLaunWrad++vVpmLs4FYEYg9M1ydxwikAfbcFky18rLx7kAQNQGEUpp
+        Cfwf4GBR+UKOTz6pEABoCXQH3FYGxiizA3/LlModJg9iafkXIjUC+LCrk6c/2UztL4r4VzcffkdIjUdt
+        2XpbzNssEhWAV+lohYahZcuWpk+fPnYJjAru2LHDdhHYvn27DafxcCQPTgdtha0Odqsm8n6BN2/e2CUr
+        rdAo0DWI6TGdcYWBnzkXtp8HgTMW5nU7kQXgHSMscWmFpgVuyi5cuOBZHJwiC0DirU5Ef7XC0wDB0uvX
+        r3vWBqeiBOCVVix8aIWnAWacx48fe9YGp6IEIPGmqWJmg6Rhk3bib5oiMcDcuHHDBiWKmabihi7Jt03c
+        vn27PO8a89P9+/fNxYsXrafGMzxsieXrMsoB0+nYsWPt95FcunTJPHz40LMqfCpZAD9VVVWZFy9eWEHu
+        3btXFijr+fPndmouNsUmQE1NmQDeZ8WmTID/6FC5qcIFMObfloqiG6gZLygAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="imgYellow2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAADgAAACACAYAAABeH6oGAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        xAAADsQBlSsOGwAACSlJREFUeF7tnFlMVFcYxw8uoKCoIC6oqCgChiggarXumgJRTBBBBNyiUsFdcd9N
+        2mr0obGPJMa6PVjDg4kvVltj+6ohIdLEaCpGcInaPiCIgl/nf2dOO537zX7PnWEyX/J7cJnzff97z/rd
+        c46gELewwO5uYYHd3cICu7t5JbCzs5M6Ojrow4cPpvLx40fq6uqyReGdeSSwqamJamtrqbq6mubNm0eZ
+        mZmmMWXKFCooKKDDhw/TrVu3qK2tzRaVZ+ZSIJ5cXV0dzZo1i3r16kVCiIARERFBCQkJtGfPHnr69Kkt
+        QvfmVODnz5/p6tWrlJiYyDoMFL1796aVK1fS69evbZG6NqcC6+vradKkSayTQAORZ86c0foEd8YKREdy
+        4MAB6tGjB+sgGMDDb2xstEXs3FiBb968oYULF7IFBwsDBw6k69ev2yJ2bqxANOKkpCS2YG/o2bOnVp2i
+        oqL+JTIy0pAOC2WfPXvWFrFzYwU+fvyY+vfvzxbsDvR28fHxlJGRQfn5+bRmzRrasmULbdu2TWPjxo1U
+        VFRE06dPpxEjRmiiuXI8Yf/+/Vpn6MoMFTh48GCaP38+bdq0iY4cOULHjh2j48eP68Dfg927d9OyZcto
+        3Lhx2hvhynTFvn37zBGIaohGD2FHjx79nwhXSME1NTWUm5tLsbGxbPnOMEUgqhhmN3DmqTBH5O/Kyspo
+        6NChrB8O5QLx5iDu4MGDPotzBG0WVZ3z54hSgRgjc3JytIZulDhJcXExxcTEsH7tUSpw2LBhtHXrVsPF
+        gUOHDtGMGTPcTjSUCUSPhxk+F5wR4KFhaBkyZAjrX6JM4MiRI2n79u1K3p49s2fP1sZVLgagRCAcwjEX
+        kJHg4a1fv5769OnDxgGUCOzbty+VlpbSiRMn2MCMAgIxERgzZgwbB1AiMC4uTmsfqqsnQGeDnpqLAygR
+        iIEYQwMXkNHgIWKc5eIASgQOHz5cy49wARnNyZMnadGiRWwcICzQYj5VURTMBWQ0qKJz585l4wBKBA4a
+        NIiqqqpM6WQwx83KymLjAEoEYlzCgtWMYWLnzp3aopiLAygRCLAalwtaVUDg6tWrtRQHFwNQJhBzxM2b
+        Nyt9i1g4T506lfUvUSYQ0zVk3RAEF5y/4O1t2LBBy5xx/iXKBAJ0NkggGd3ZoDxMJCZPnuxyog2UCoTz
+        9PR0rSMwUiTaNrJxrtqeRKlAgAVpdna2ljTyVyR+D3HIsvXr14/154hygQBJXIxVcn3oi1D8BhPrJUuW
+        eJVZM0UgQHUdPXq09tXHmwSU/H+YOEybNs2jammPaQIlSBTho2V5eTnt3btXq3IQgeEE80qAP6P3xYOA
+        MCSKMey461A4TBcowWwHMxBMCJC7Qb6zoqJCA20MolJSUjQf/nzBCphAswgLtFhYYDATFmixsEBfiY4W
+        lJEh6KuvBJWUCCottVJQIOiLL5D64H/nDaYLjIhAWl/Q118L+uknQQ0Ngt69g4v/aGsT9Oefgm7fFvTN
+        N8Ky5sNnOL48d5gqMC7OKuz+fasIe1HO6OoS1Nws6PvvrW+bK9cVpglMTxd08aLnwjgePBCWWQ6+XPE+
+        OEwRmJUl6O5dYXGkD9pbnj8XVFnpeZVVLjAlRdDPP+sD9YeXL4VlVcL7c0SpwNhYQbW1gjo79UH6Czqn
+        nBzerz1KBeIpt7bqgzOKH38Ulhh43xJlAhMSBN25ow/KSP7+W1BuLu9fokxgcbE1AMegjObCBaRE+BiA
+        EoFRUdZxyzEYFTQ2Cho7Vh+DRInAxERBv/2mD0YFmAUVFeljkCgRmJZmHa8cg1EBeuiaGn0MEiUCMzMF
+        tbfrg1HFt9/qY5AoEYiZS0eHPhBVnDqlj0ESEm/wu+/0MUiUCMTEOqTbIHrR33/XB6OCv/4KQC9q5jj4
+        xx+CkpP1MUiUCARIQZgxk8F81PSZDMBc9Jdf9AEZCR5gXh7vX6JMICgrU7uauHTJuiTjfEuUCoTz8+fV
+        rAcfPrQmozi/9igVCFJTjV82vXolqLyc9+eIcoEgO1vQvXvG5GRaWgRVVQVRTkYycaKgy5f9y6rV1wta
+        vtx1r+mIaQJBfLyg6mproJ5O5fDWX7wQ9MMPOC7Hl+sKUwUCZLaTkqxC6+qsnYXjeAnxTU2Cfv3VOpFG
+        Gj8yki/PHaYLtCcmxvpW8vOtCaqKCiuFhYK+/BLnLvjfeUNABZpBWKDFwgKDmbBAi4UF+gJOheL4Afaf
+        LV68WDsKhN1OoLCwUNtJP378eG1XYbfa6YS9ajjLCyHYqybPV3B71XARAc78QizuqAjqvWoIbtSoUbRi
+        xQqfdhtCKM4oBeVuQxyWxA5DnJFHwJ6Kswe/wYNBdQ6q/aJoP9gMa+SOX7RRT87vAqUCUS3T0tKU7NnO
+        y8vTTnhzfu1RKhC77rH130hxAOUhcOy65/zao0wg3t6CBQuUnpvA8daAnZsI+ZMvGMDRVrjAjAJvcdWq
+        VS7bohKBIX/6LOTPD+IEKKZhXEBGg4c4Z84cNg6gRGD4kLKBBERgyJ+jD/mbEKKjo0P7LgtM08y6jQRz
+        XVwOwsUBlAgEWNzu2LFDeTXFEOFqpa9MIBa5S5cuZYMyAjw4XKcUsBuBAIYLlXc6zZw5M3B3OgE4x2zf
+        6Fu5UFZJSUngb+UCSBLhsKM3iSZ3rF27Vsuycf4cUS4QYHUBkXDmq0j5OxyNxXVmnB8OUwQCrNmQYsAq
+        wz5gd+D/YTxF0gp5mAEDBrDlO8M0gRJc2YcrICBULoghggP/hoEca0tkuX25c9Qvgd7eFClB5wOhyHAj
+        z7lu3Tqtt8W4CSorK7Wr/XDzHcZTf+4XRXbcJ4HPnj2j5ORktlBvwHiJjgjtVAJBRt0Qe+7cOVvEzo0V
+        +PbtW+0+Ca7gYAG30N64ccMWsXNjBeKWZrQhPCWu8GAAnwsePXpki9i5sQJhDQ0NWiFc4YEGvfbp06d9
+        v2cbhsZ75coVbUrGOQkUaL9Yrvl9UzoMVfXatWtaHtSfD5VGgXa3a9cuevLkiS1C9+ZSoDQMG+ixcD0t
+        7qdITU2lCRMmmAI+8CAvgyHm5s2b9P79e1tUnplHAqV9+vSJWltbqaWlhZqbm00BVbG9vd2j9saZVwK7
+        o4UFdncLC+zuFhbY3S3EBRL9A6SYCeTu7/I9AAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="imgGreen2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAADgAAACBCAYAAACVQ3mjAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        xAAADsQBlSsOGwAACRpJREFUeF7tnWmoVkUYx923676vKLnvu6IhrqCCuyju+75vue9o6jcLLBTyix+K
+        ICJCCAOhQBQhqEDEKM1CMyG1yH2Znt/wHrndnnPe7cy898Z5ht8H631nnv85c2aeeWbec8uZ/7klAsu6
+        JQLLuiUCy7plJfDVq1fm+fPn5unTp+bJkyfeoD3azcUyEvjs2TNz4cIFc+TIETNjxgwzYMAA06tXL28M
+        GjTIzJs3zxw/ftxcvXrVXuhMLa3A27dvm0OHDpmWLVuaChUqmHLlyhUM2u/du7c5c+aMefToUcrDaIsU
+        eP/+fbN06VJTtWpVtcFC0ahRI3Py5Enz8uXLlKfhFiqQL584ccJUq1ZNbaTQdOzY0Vy6dCnlbbiFCrxx
+        44bp16+fWnlpoHz58mbdunVpu2qowLNnz9quoFVeWmDwuXPnTspj3UIF0j0rVaqkVpwN1FGlShX7HAdU
+        rlzZVKxYUf18NjRu3Nhcu3Yt5bFuoQKPHj2qVpoJiGjRooUZOHCgmTp1qh2o6E6wZs0aM3/+fDN27FjT
+        rVs306BBA9vdtHrSUaNGjbTPYawCuStt27Y1U6ZMMZs3bzb79u2z7N+//z/w3/fs2WNWrFhhhg8fbho2
+        bKjWGUVRUZG5ePFiymPdYhNYu3ZtM3r0aLNly5Z/iUgHn9u7d68V2qNHD9t9tfo1vAls0qSJmTVr1muH
+        S4rIBL63bds2M2zYsIznXS8C6Vo8U5rT2YLInTt3WpGZ3EnnAmlg2rRpqrO5gsjt27fbOThdaOhUII0z
+        D+3atUt1NB8QuXbtWtO0aVO17QCnApmDGPJzfeYyYfz48ZHzpTOBzFtDhgxRnYoLLtz69evtKkbzAZwJ
+        JABfvHix07sXwIUMCwScCWzTpo2dyF0LPHDggF1gV69eXfXDmUBGOBeDS0m4gDzn9evXV/1wJpB5ykf3
+        BKYMAgnND2cCR40aZQ4ePKg6FDe7d+82zZo1U/1IBIrlJHDo0KHeuijxqfcuSmaLmFFzKE64iCtXrjT1
+        6tVT/XAmkMXsxo0bvUwTLJjDEl/OBJKCIBHrWiALYrICmg/gTCD079/fLlQ1x+KAu7d69Wob82rtg1OB
+        devWNUuWLHF2F7l4I0eOjMzXOBVIwz179rQTcdwiqY9EVdjgEuBUIPAskh3jWdEczQXEMYB17tw5bbbN
+        uUCoWbOmzaIhMt87yfdJWvXp0yejjR4vAoGM2rhx42wAnotIvgOs/5hjM004exMIdFf2DZmYA6dLCtHg
+        cwQNM2fONK1bt07bLYvjVSDgHMM6iVyE4jijISKIXYHhn3/Tpbdu3Wpmz55tNzlxVqszCu8CA3h+atWq
+        Zdq3b2/F8ozOmTPHQv6UXAsTOBFRPttzBRPoi0SgWCKwNJMIFEsE5gMOkJnu0KGD3c2Frl272k1S5sts
+        9gI1CiKQvYTmzZubESNG2EUx4RcTPpN7EN2QZyEQYGeqb9++NtTT6kqHd4HclTFjxphNmzbZCCaIWrTw
+        DPj/xK/Lli2zQsMy2GF4E0jk0qlTJ7N8+fLXAkqKioLPI3TSpElZ7dV7EYg4rj5rOO6IJiAb2C0OSxOW
+        xItABo44N2Koh5g1bD+iOM4FMpgwWMQlLoDnl4A83WEEpwJpnGcmbnEBO3bssL1DazvAqUDmMoZ7zbk4
+        4MIxzXCaSWsfnAlkYJk4caKzuwfUTcauS5cuqg/gTCA5UZKyLgUCozKnp8JyNM4EktKje7oWSP0LFy4M
+        jXScCeR8TJy50CiYX8Mmf2cCSan72gAlwkl2eCMsuYMagwcP9vYMsjLx/gwyN/kaRRctWuR/FGVby9c8
+        yPrS+zxIJOMyDgXqJpIhxaH5AM4EQrt27awDmnNxgMCCxaLAamLy5MnO7iJ5nO7du6ttBzgVCGyerFq1
+        KnaRrAcnTJhQ2PVgAFc5+CmB5my2UM/cuXPtD0a09orjRSBpQo5XMl/FkZNZsGBB2rPaAV4EAqMqKwx+
+        3IGT2d5NPk/Ewj5iqcuqFYdsGKcuSEJlmhcl1uTCcLAoasTU8C4Q6LKk6wnISQFu2LDB3p1AFAKJghic
+        pk+fboXVqVMnq735gIIILA5HTFq1amWTwvwuCUgksbXN3ebggva9TCm4QNckAsUSgaWZRKBYIjAnKgrN
+        hLHCfuGMcDbFZ8L7whqhr1BH0OrIAP8CywtdhX3Ct8LfwgtBK0+FP4TPhblCI0GrMwK/AouElQLCXgnZ
+        FC7Ep8KbQgVBq1/Bn8AWAt0OR/MpPwmLhKqC1k4J/AhsIvCMPRPiKL8LSwSeY629YrgXWEN4R3guxFl+
+        FSYJabqre4EMDvcEF+Wy8IagtZvCrcDWwiXBVXkpHBIiuqo7gUwHq4SwKSCuclXoJmg+CO4EMiV8Kbgu
+        zJVrBS6o4oc7gQOEXwQf5UOhtqD44U7gQiHfOS/T8p3QRlD8cCdwr5BttJJrYZTuLih+uBN4VPBVeA57
+        C4ofiUCx3AQeFHyVv4QeguKHO4GsGh4LPso1oZ2g+OFO4DDhN8FHYYFcX1D8cCeQBl2GaUEhXNslhATd
+        7gQSWewRXE8VPwuDBM0HwZ1AYG76QXBZPhAiFr9uBRLlvyU8ElyUH4WQ6SHArUBoLHwixF3+FMi6VRK0
+        dlO4FwhdhK+EuJ7Hh8JhgRWL1l4x/AiEXsIXAqNePuW+wCK3rqC1UwJ/AoEV/rvCXSHbwoX5XpgvZHDn
+        AvwKhGoC2eyPhDtCukJGAGFvC50Frc4I8hJ47NgxtdKMIB1PEnez8LHwjXBDYF5jdPxaeE+YIyAszWAS
+        BgIvX76c8li3UIGnTp3K++dvNiCoLrAi57kKqClUEbTvZAE/TLl+/XrKY91CBZ47dy7j8yqFglcv3b17
+        N+WxbqECb968GfmymkLDqQwOHz1+/DjlsW6hAnndOi/rLq3v2eZXpekGGCxUIMab0nkpTr7HPeKGc2yM
+        ES9evEh5Gm6RArFbt27Z89mca8nlsE6c0D4v6Tl9+rR5+PBhysNoSysQ408inD9/3grlmCMnDOkivkAU
+        v/c9fPiwuXLlSrx/raC48f57/jTDvXv37J31xYMHD2y72QgLLCuBZdESgWXdEoFl3RKBZd0SgXEaE3WA
+        HzPmHwBqh0Ti3yrcAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>43</value>
+  </metadata>
 </root>
